--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="mobile-web-app-capable" content="yes" />
 <meta name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=no" />
-<link rel="canonical" href="internalbacklink" />
-<link rel="alternate" hreflang="id" href="internalbacklink" />
+<link rel="canonical" href="https://meejepe.github.io/raihjackpot/" />
+<link rel="alternate" hreflang="id" href="https://meejepe.github.io/raihjackpot/" />
 <link rel="apple-touch-icon-precomposed" href="https://imagizer.imageshack.com/img922/7088/N1mMhu.png">
 <link rel="icon" href="https://imagizer.imageshack.com/img922/7088/N1mMhu.png" type="image/png">
 <link rel="icon" type="image/x-icon" href="https://imagizer.imageshack.com/img922/7088/N1mMhu.png" />
@@ -28,9 +28,10 @@
 <meta name="geo.country" content="ID" />
 <meta name="geo.region" content="ID" />
 <meta name="tgn.nation" content="Indonesia" />
+<meta name="google-site-verification" content="zge-qoW-s7qYMLAbgOpWEk96Frtl6cyTg9sxl6YJ198" />
 <meta property="og:title" content="Teknik Menjamin Kemenangan Jutaan! Pria Asal Makasar Meraih Jackpot Di Situs SEROJA88" />
 <meta property="og:description" content="meraih jackpot sensasional dengan pola akurat di dampingin dengan persentase rtp live winrate tertinggi 99,7% di situs seroja88 penjamin cuan jutaan hari ini." />
-<meta property="og:url" content="internalbacklink" />
+<meta property="og:url" content="https://meejepe.github.io/raihjackpot/" />
 <meta property="og:image" content="https://imagizer.imageshack.com/img924/1296/lOTuGq.jpg" />
 <meta property="og:image:type" content="image/jpg" />
 <meta property="og:site_name" content="Seroja88" />
@@ -40,7 +41,7 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Teknik Menjamin Kemenangan Jutaan! Pria Asal Makasar Meraih Jackpot Di Situs SEROJA88" />
 <meta name="twitter:description" content="meraih jackpot sensasional dengan pola akurat di dampingin dengan persentase rtp live winrate tertinggi 99,7% di situs seroja88 penjamin cuan jutaan hari ini." />
-<meta name="twitter:url" content="internalbacklink" />
+<meta name="twitter:url" content="https://meejepe.github.io/raihjackpot/" />
 <meta name="twitter:image" content="https://imagizer.imageshack.com/img924/1296/lOTuGq.jpg" />
 <meta name="twitter:label1" content="Estimasi waktu membaca" />
 <meta name="twitter:data1" content="9 menit" />
@@ -62,7 +63,7 @@ font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helve
 "@type": "Organization",
 "name": "Seroja88",
 "alternateName": "Teknik Menjamin Kemenangan Jutaan! Pria Asal Makasar Meraih Jackpot Di Situs SEROJA88",
-"url": "internalbacklink",
+"url": "https://meejepe.github.io/raihjackpot/",
 "logo": "https://imagizer.imageshack.com/img924/2476/BGF3gG.png"
 }
 </script>
@@ -74,12 +75,12 @@ font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helve
 "@type": "ListItem",
 "position": 1,
 "name": "Home",
-"item": "internalbacklink"
+"item": "https://meejepe.github.io/raihjackpot/"
 }, {
 "@type": "ListItem",
 "position": 2,
 "name": "Seroja88",
-"item": "internalbacklink"
+"item": "https://meejepe.github.io/raihjackpot/"
 }]
 }
 </script>
@@ -89,7 +90,7 @@ font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helve
 "@type": "NewsArticle",
 "mainEntityOfPage": {
 "@type": "WebPage",
-"@id": "internalbacklink"
+"@id": "https://meejepe.github.io/raihjackpot/"
 },
 "headline": "Teknik Menjamin Kemenangan Jutaan! Pria Asal Makasar Meraih Jackpot Di Situs SEROJA88",
 "description": "meraih jackpot sensasional dengan pola akurat di dampingin dengan persentase rtp live winrate tertinggi 99,7% di situs seroja88 penjamin cuan jutaan hari ini.",
@@ -97,7 +98,7 @@ font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helve
 "author": {
 "@type": "Organization",
 "name": "Seroja88",
-"url": "internalbacklink"
+"url": "https://meejepe.github.io/raihjackpot/"
 },
 "publisher": {
 "@type": "Organization",
@@ -179,7 +180,7 @@ font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helve
 <tr>
 <td style="padding: 10px;">Provider</td>
 <td style="padding: 10px;">
-<a href="internalbacklink"><strong><span class="twinkling" style="color: #9c00c3;">SEROJA88</span></a>
+<a href="https://meejepe.github.io/raihjackpot/"><strong><span class="twinkling" style="color: #9c00c3;">SEROJA88</span></a>
 </td>
 </tr>
 <tr>
@@ -251,7 +252,7 @@ font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helve
 <br>
 <div class="container">
 <div class="copyleft acenter pb-2">
-<span>&copy; 2024 <a href="internalbacklink"><span class="twinkling" style="color: #9c00c3;">Seroja88</span></a> All Rights Reserved</span>
+<span>&copy; 2024 <a href="https://meejepe.github.io/raihjackpot/"><span class="twinkling" style="color: #9c00c3;">Seroja88</span></a> All Rights Reserved</span>
 </div>
 </div>
 
